change template files

--- a/template/error-message.html
+++ b/template/error-message.html
@@ -38,16 +38,16 @@
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/about/">About</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/employee/">Employee</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/">Employee</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/attendance/">Attendance</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/">Attendance</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/leave/">Leave</a>
+                            <a class="nav-link btn-outline-primary rounded-pill px-3" href="/">Leave</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link btn-outline-primary rounded-pill px-3" href="/payroll/">Payroll</a>
@@ -66,18 +66,23 @@
 
 	<!-- Start Content -->
 		<section class="container py-5">
-			<h1 class="col-12 col-xl-8 h2 text-left text-primary pt-3">{{ errorMsg }}</h1>
-			<div class="row pb-4">
-				<form action= {{ action }} autocomplete="on" method="POST" enctype="multipart/form-data" class="form-bubble">
+		
+		<h1 class="col-12 col-xl-8 h2 text-left text-primary pt-3">{{ errorMsg }}</h1>
+		</br>
+	</br>
+
+        <div class="row pb-4">
+			<form action= {{ action }} autocomplete="on" method="POST" enctype="multipart/form-data" class="form-bubble">
 				<div class="col-lg-8 ">
 					<div class="col-md-12 col-12 m-auto text-end">
 						<button type="submit" class="btn btn-secondary rounded-pill px-md-5 px-4 py-2 radius-0 text-light light-300">Back</button>
 					</div>															
-				</form>
-			</div>
+
+					</form>
+				</div>
 			</div>
 		</section>
-	<!-- End Content -->
+    <!-- End Content -->
 
     <!-- Start Footer -->
     <footer class="bg-secondary pt-4">
@@ -128,7 +133,7 @@
                                 <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light" href="/">Home</a>
                             </li>
                             <li class="pb-2">
-                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/about/">About Us</a>
+                                <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/">About Us</a>
                             </li>
                         </ul>
                 </div>
@@ -137,13 +142,13 @@
                     <h2 class="h4 pb-lg-3 text-light light-300">Our Works</h2>
                     <ul class="list-unstyled text-light light-300">
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/employee/">Employee</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/">Employee</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/attendance/">Attendance</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/">Attendance</a>
                         </li>
                         <li class="pb-2">
-                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/leave/">Leave</a>
+                            <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/">Leave</a>
                         </li>
                         <li class="pb-2">
                             <i class='bx-fw bx bxs-chevron-right bx-xs'></i><a class="text-decoration-none text-light py-1" href="/payroll/">Payroll</a>
