change a-output html

--- a/template/attendance-output.html
+++ b/template/attendance-output.html
@@ -78,7 +78,7 @@
                 <h3 class="h4 pb-2 light-300">Time</h3>
                 <h3 class="h4 pb-2 light-300">Status</h3>
             </div>
-            <div>
+            <div m-2>
                 <h3 class="h4 pb-2 light-300">&ensp;:&ensp;{{ emp_id }}</h3>
                 <h3 class="h4 pb-2 light-300">&ensp;:&ensp;{{ date }}</h3>
                 <h3 class="h4 pb-2 light-300">&ensp;:&ensp;{{ time }}</h3>
