--- a/template/attendance-view.html
+++ b/template/attendance-view.html
@@ -63,69 +63,37 @@
     </nav>
     <!-- Close Header -->
 
-    <!-- Start Employee Leave -->
+    <!-- Start Attendance View -->
     <section class="container py-5">
         <div class="leave-content m-auto text-left justify-content-center">
             <h2 class="leave-heading h3 pb-3 light-300 typo-space-line">Attendance View</h2>
         </div>
-
-        <script type="text/javascript">
-            document.write(" <table class='custom-leave-tb overflow-hidden'>")
-                document.write("<tr class='custom-leave-row'>")
-                    document.write("<th class='custom-leave-col1'> <b>EMPLOYEE ID</b> </th> ")
-                    document.write("<th class='custom-leave-col1'> <b>DATE</b> </th> ")
-                    document.write("<th class='custom-leave-col1'> <b>TIME</b> </th> ")
-                    document.write("<th class='custom-leave-col1'> <b>STATUS</b> </th> ")
-                    document.write("<th class='custom-leave-col2'> <b>UPDATE TIME</b> </th> ")
-
-                    
-                document.write("</tr>")
-
-                for(col = 1; col <= 4; col++) {
-                    document.write("<tr>")
-                    document.write(" <td class='custom-leave-col1'> {{ emp_id }} </td> ")
-                    document.write(" <td class='custom-leave-col1'> {{ date }} </td> ")
-                    document.write(" <td class='custom-leave-col1'> {{ time }} </td> ")
-                    document.write(" <td class='custom-leave-col1'> {{ status }} </td> ")
-                    document.write(" <td class='custom-leave-col2'> 30/Aug-2022 00:00:00 </td> ")
-                    document.write("</tr>")
-                }
-                document.write("</table>")
-        </script>
-
-        <table class="viewleave custom-leave-tb overflow-hidden">
-            <tr class="custom-leave-row">
-                <th class="custom-leave-col1"><b>EMPLOYEE ID</b></th>
-                <th class="custom-leave-col1"><b>DATE</b></th>
-                <th class="custom-leave-col1"><b>TIME</b></th>
-                <th class="custom-leave-col1"><b>STATUS</b></th>
-                <th class="custom-leave-col2"><b>UPDATE TIME</b></th>
+        
+        <table class='custom-leave-tb overflow-hidden'>
+            <tr class='custom-leave-row'>
+                <th class='custom-leave-col1'> <b>EMPLOYEE ID</b> </th>
+                <th class='custom-leave-col1'> <b>DATE</b> </th>
+                <th class='custom-leave-col2'> <b>TIME</b> </th>
+                <th class='custom-leave-col1'> <b>STATUS</b> </th>
+                <!-- <th class='custom-leave-col1'> <b>INSERT TIME</b> </th> -->
+                
             </tr>
-            <tr>
-                <td class="custom-leave-col1">E0001</td>
-                <td class="custom-leave-col1">10/01/2022</td>
-                <td class="custom-leave-col1">12:22 AM</td>
-                <td class="custom-leave-col1">Attend</td>
-                <td class="custom-leave-col2">25/09/2022 00:00:00</td>
-            </tr>
-            <tr>
-                <td class="custom-leave-col1">E0002</td>
-                <td class="custom-leave-col1">10/01/2022</td>
-                <td class="custom-leave-col1">12:22 AM</td>
-                <td class="custom-leave-col1">Attend</td>
-                <td class="custom-leave-col2">25/09/2022 00:00:00</td>
-            </tr>
+            {% for data in attendance_view %}
+                <tr>
+                    <td class='custom-leave-col1'> {{ data[0] }} </td>
+                    <td class='custom-leave-col1'> employee name </td>
+                    <td class='custom-leave-col1'> {{ data[1] }} </td>
+                    <td class='custom-leave-col1'> {{ data[2] }} </td>
+                    <td class='custom-leave-col1'> {{ data[3] }} </td>
+                    <!-- <td class='custom-leave-col2'> {{ data[5] }} &nbsp;&nbsp; {{ data[6] }} </td> -->
+                </tr>
+            {% endfor %}
         </table>
 
-        <!-- <div class="form-row pt-4">
-            <div class="text-end">
-                <a href="leave-update.html"><button type="button" class="btn btn-secondary text-white px-md-4 px-2 py-md-2 py-1 radius-0 light-300">Update</button></a>
-            </div>
-        </div> -->
-        <!-- End Employee Leave View-->
+    
 
     </section>
-    <!-- End Employee Leave -->
+    <!-- End Attendance View -->
 
     <!-- Start Footer -->
     <footer class="bg-secondary pt-4">
