--- a/template/attendance-view.html
+++ b/template/attendance-view.html
@@ -75,7 +75,6 @@
                 <th class='custom-leave-col1'> <b>DATE</b> </th>
                 <th class='custom-leave-col1'> <b>TIME</b> </th>
                 <th class='custom-leave-col1'> <b>STATUS</b> </th>
-                <!-- <th class='custom-leave-col1'> <b>INSERT TIME</b> </th> -->
                 
             </tr>
             {% for data in attendance_view %}
@@ -84,7 +83,7 @@
                     <td class='custom-leave-col1'> {{ data[1] }} </td>
                     <td class='custom-leave-col1'> {{ data[2] }} </td>
                     <td class='custom-leave-col1'> {{ data[3] }} </td>
-                    <!-- <td class='custom-leave-col2'> {{ data[5] }} &nbsp;&nbsp; {{ data[6] }} </td> -->
+                    <td class='custom-leave-col1'> "HELO" </td>
                 </tr>
             {% endfor %}
         </table>
