--- a/template/attendance-view.html
+++ b/template/attendance-view.html
@@ -69,13 +69,12 @@
             <h2 class="leave-heading h3 pb-3 light-300 typo-space-line">Attendance View</h2>
         </div>
         
-        <table class='custom-leave-tb overflow-hidden'>
+        <table class='custom-leave-tb '>
             <tr class='custom-leave-row'>
                 <th class='custom-leave-col1'> <b>EMPLOYEE ID</b> </th>
                 <th class='custom-leave-col1'> <b>DATE</b> </th>
                 <th class='custom-leave-col1'> <b>TIME</b> </th>
-                <th class='custom-leave-col2'> <b>STATUS</b> </th>
-                
+                <th class='custom-leave-col1'> <b>STATUS</b> </th>
             </tr>
             {% for data in attendance_view %}
                 <tr>
