--- a/template/attendance-view.html
+++ b/template/attendance-view.html
@@ -69,7 +69,7 @@
             <h2 class="leave-heading h3 pb-3 light-300 typo-space-line">Attendance View</h2>
         </div>
         
-        <table class='custom-leave-tb '>
+        <table class='custom-leave'>
             <tr class='custom-leave-row'>
                 <th class='custom-leave-col1'> <b>EMPLOYEE ID</b> </th>
                 <th class='custom-leave-col1'> <b>DATE</b> </th>
