--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -5,11 +5,11 @@ https://templatemo.com/tm-561-purple-buzz
 
 */
 .custom-leave {
-  display: flex;
-    /* flex-direction: column; */
+    display: flex;
+    flex-direction: column;
     margin-top: 50px;
-    padding-left: 10px;
-    padding-right: 10px;
+    /* padding-left: 10px;
+    padding-right: 10px; */
     width: 100%;
     border: 1px solid black;
 }
